<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.admin.pmdm_practica5_jaime.Color"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical|center_horizontal">

        <Space
            android:layout_width="20px"
            android:layout_height="20px"
            android:layout_weight="1" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="false"
            android:layout_alignParentBottom="false"
            android:layout_alignParentRight="false"
            android:layout_alignWithParentIfMissing="false"
            android:layout_weight="1"
            android:id="@+id/radioGroup">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_tamaño_superfino"
                android:id="@+id/radioButton"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:checked="false" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_tamaño_fino"
                android:id="@+id/radioButton2"
                android:layout_below="@+id/radioButton"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:checked="false" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_tamaño_fmedino"
                android:id="@+id/radioButton3"
                android:layout_below="@+id/radioButton2"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:checked="true" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_tamaño_grueso"
                android:id="@+id/radioButton4"
                android:layout_below="@+id/radioButton3"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:checked="false" />

        </RadioGroup>

        <Space
            android:layout_width="20px"
            android:layout_height="20px"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_aceptar"
            android:id="@+id/button"
            android:onClick="aceptar" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_cancelar"
            android:id="@+id/button2"
            android:onClick="cancelar" />
    </LinearLayout>

</LinearLayout>
